--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </style>
 </head>
 <body>
-    <img src="https://github.com/qqmmyy/hahaha/assets/164297647/34407bc-ea9b-4828-94a0-ad69e65eeeb">
+    <img src="https://github.com/qqmmyy/hahaha/blob/main/pp1.jpg">
     <div style="position:relative;">
         <button onclick="window.location.href='第二页2.html'" >button1</button>
         <button onclick="window.location.href='可视化.html'">button2</button>
