--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Awesome-pyecharts</title>
+    <link rel="shortcut icon" href="#" />
     <style type="text/css">
             body{
             padding:0;
