--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </style>
 </head>
 <body>
-    <img src="。/pp1.jpg">
+    <img src="./pp1.jpg">
     <div style="position:relative;">
         <button onclick="window.location.href='第二页2.html'" >button1</button>
         <button onclick="window.location.href='可视化.html'">button2</button>
