--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <title>Awesome-pyecharts</title>
-    <link rel="shortcut icon" href="#" />
     <style type="text/css">
             body{
             padding:0;
@@ -32,7 +31,7 @@
     </style>
 </head>
 <body>
-    <img src="./pp1.jpg">
+    <img src="https://github.com/qqmmyy/hahaha/blob/main/pp1.jpg">
     <div style="position:relative;">
         <button onclick="window.location.href='第二页2.html'" >button1</button>
         <button onclick="window.location.href='可视化.html'">button2</button>
