--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Awesome-pyecharts</title>
+    <title>旅游数据可视化</title>
     <style type="text/css">
             body{
             padding:0;
@@ -31,7 +31,7 @@
     </style>
 </head>
 <body>
-    <img src="file:///D:/test/数据可视化/pp1.jpg">
+    <img src="pp1.jpg">
     <div style="position:relative;">
         <button onclick="window.location.href='第二页2.html'" >button1</button>
         <button onclick="window.location.href='可视化.html'">button2</button>
