--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             }
     </style>
 </head>
-<body background="pp1.jpg">
+<body style="backgroundcolor:blue;">
     <div style="position:relative;">
         <button onclick="window.location.href='第二页2.html'" >button1</button>
         <button onclick="window.location.href='可视化.html'">button2</button>
