--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             }
     </style>
 </head>
-<body style="backgroundcolor:blue;">
+<body>
     <div style="position:relative;">
         <button onclick="window.location.href='第二页2.html'" >button1</button>
         <button onclick="window.location.href='可视化.html'">button2</button>
