--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
             body{
             padding:0;
             margin:0;
-            backgroundimage: url('pp1.jpg');
+            background-image: url('./pp1.jpg');
             }
             img{
             position:absolute;
