--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
             body{
             padding:0;
             margin:0;
-            background-image: url('./pp1.jpg');
+            background-image: url('pp1.jpg');
+            background-size: cover;
+            background-attachment: fixed;
+            background-position:center center;
             }
             img{
             position:absolute;
@@ -35,7 +38,7 @@
     <div style="position:relative;">
         <button onclick="window.location.href='第二页2.html'" >button1</button>
         <button onclick="window.location.href='可视化.html'">button2</button>
-</div>
+    </div>
 
 </body>
 </html>
