--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
             body{
             padding:0;
             margin:0;
-            background-image: url('pp1.jpg');
-            background-size: cover;
-            background-attachment: fixed;
-            background-position:center center;
+    
             }
             img{
             position:absolute;
@@ -34,7 +31,10 @@
             }
     </style>
 </head>
-<body>
+<body background="pp1.jpg"
+      style="background-repeat:no-repeat
+      background-attachment:fixed;
+      background-size:100% 100%; ">
     <div style="position:relative;">
         <button onclick="window.location.href='第二页2.html'" >button1</button>
         <button onclick="window.location.href='可视化.html'">button2</button>
