--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <body background="pp1.jpg"
       style="background-repeat:no-repeat
       background-attachment:fixed;
-      background-size:100% 100%; ">
+      background-size:cover; ">
     <div style="position:relative;">
         <button onclick="window.location.href='第二页2.html'" >button1</button>
         <button onclick="window.location.href='可视化.html'">button2</button>
