--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
             body{
             padding:0;
             margin:0;
-    
             }
             img{
             position:absolute;
@@ -38,6 +37,12 @@
     <div style="position:relative;">
         <button onclick="window.location.href='第二页2.html'" >button1</button>
         <button onclick="window.location.href='可视化.html'">button2</button>
+    </div>
+    <div class="container">
+    <form action="" class="parent">
+    <input type="text" class="search" placeholder="搜索">
+    <input type="button" name="" id="" class="btn">
+    </form>
     </div>
 
 </body>
