--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
       background-attachment:fixed;
       background-size:cover; ">
     <div style="position:relative;">
-        <button onclick="window.location.href='第二页2.html'" >button1</button>
+        <button onclick="window.location.href='结果2.html'" >看看天气</button>
         <button onclick="window.location.href='可视化.html'">button2</button>
     </div>
    
