--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
                 border: 2px solid $border-color;
                 border-radius: 6px;
                 margin-bottom: 16px;
+                transform: skewX(-20deg);
                 transition: all .5s ease;
                 
                 &--stripe {
@@ -128,6 +129,7 @@
             border:none;
             cursor:pointer;
             margin:50px;
+            transform: skewX(-20deg);
             margin-left:340px;
             margin-top:350px;
             border-radius:5px;
