--- a/index.html
+++ b/index.html
@@ -133,6 +133,8 @@
             margin-left:340px;
             margin-top:350px;
             border-radius:5px;
+            width:50px;
+            height:200px;
             }
             button:hover{
             background-color:#0056b3
