--- a/index.html
+++ b/index.html
@@ -122,16 +122,17 @@
             height:100%;
             }
             button{
+            writing-mode:vertical-rl;
             padding:10px 20px;
-            font-size:16px;
+            font-size:20px;
             background-color:#007bff
             color:white
             border:none;
             cursor:pointer;
             margin:50px;
             transform: skewX(-20deg);
-            margin-left:340px;
-            margin-top:350px;
+            margin-left:200px;
+            margin-top:200px;
             border-radius:5px;
             width:50px;
             height:200px;
