--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             button{
             writing-mode:vertical-rl;
             padding:10px 20px;
-            font-size:20px;
+            font-size:25px;
             background-color:#007bff
             color:white
             border:none;
@@ -134,7 +134,7 @@
             margin-left:200px;
             margin-top:200px;
             border-radius:5px;
-            width:50px;
+            width:100px;
             height:200px;
             }
             button:hover{
@@ -148,7 +148,7 @@
       background-size:cover; ">
     <div style="position:relative;">
         <button onclick="window.location.href='结果2.html'" >看看天气</button>
-        <button onclick="window.location.href='可视化.html'">button2</button>
+        <button onclick="window.location.href='可视化.html'">瞅瞅景点</button>
     </div>
    
 
