--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             padding:10px 20px;
             font-size:25px;
             background-color:#007bff
-            color:white
+            color:#87CEFA
             border:none;
             cursor:pointer;
             margin:50px;
