--- a/index.html
+++ b/index.html
@@ -125,20 +125,21 @@
             writing-mode:vertical-rl;
             padding:10px 20px;
             font-size:25px;
-            background-color:#007bff
+            background-color:#87CEFA
             color:#87CEFA
             border:none;
             cursor:pointer;
             margin:50px;
             transform: skewX(-20deg);
             margin-left:200px;
+            margin-right:200px;
             margin-top:200px;
             border-radius:5px;
             width:70px;
             height:160px;
             }
             button:hover{
-            background-color:#0056b3
+            background-color:#6495ED
             }
     </style>
 </head>
