--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
             writing-mode:vertical-rl;
             padding:10px 20px;
             font-size:25px;
-            background-color:#87CEFA
-            color:#87CEFA
+            background-color:#87CEFA;
+            color:#87CEFA;
             border:none;
             cursor:pointer;
             margin:50px;
