--- a/index.html
+++ b/index.html
@@ -124,6 +124,8 @@
             button{
             writing-mode:vertical-rl;
             padding:10px 20px;
+            background-image:url('https://github.com/qqmmyy/hahaha/blob/main/pp2.jpg');
+            background-size:cover;
             font-size:25px;
             background-color:#87CEFA;
             color:white;
