--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
             background-image:url('https://github.com/qqmmyy/hahaha/blob/main/pp2.jpg');
             background-size:cover;
             font-size:25px;
-            background-color:#87CEFA;
-            color:white;
+/*             background-color:; */
+            color:black;
             border:none;
             cursor:pointer;
             margin:50px;
