--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
     <div style="position:relative;">
         <button onclick="window.location.href='结果2.html'" >看看天气</button>
         <button onclick="window.location.href='可视化.html'">瞅瞅景点</button>
+        <button onclick="window.location.href='第二页2.html'">看看别的</button>
     </div>
    
 
