--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
             cursor:pointer;
             margin:50px;
             transform: skewX(-20deg);
-            margin-left:200px;
-            margin-right:100px;
+            margin-left:70px;
+            margin-right:70px;
             margin-top:200px;
             border-radius:5px;
             width:70px;
@@ -152,7 +152,7 @@
     <div style="position:relative;">
         <button onclick="window.location.href='结果2.html'" >看看天气</button>
         <button onclick="window.location.href='可视化.html'">瞅瞅景点</button>
-<!--         <button onclick="window.location.href='第二页2.html'">看看别的</button> -->
+        <button onclick="window.location.href='第二页2.html'">看看别的</button>
     </div>
    
 
