--- a/结果2.html
+++ b/结果2.html
@@ -8,6 +8,12 @@
 </head>
 <body>
     <div id="7d52a978d01d4d58ad01243fbc79ea55" style="width:1300px; height:700px;"></div>
+    <div class="nav">
+        <ul class="nav_ul">
+            <li><a href="index.html">首页</a></li>
+            <li><a href="结果2.html">看看天气</a></li>
+            <li><a href="可视化.html">瞅瞅景点</a></li>
+            <li><a href="第二页2.html">看看别的</a></li>
     <script>
         var chart_7d52a978d01d4d58ad01243fbc79ea55 = echarts.init(
             document.getElementById('7d52a978d01d4d58ad01243fbc79ea55'), 'white', {renderer: 'canvas'});
