--- a/结果2.html
+++ b/结果2.html
@@ -14,6 +14,33 @@
             <li><a href="结果2.html">看看天气</a></li>
             <li><a href="可视化.html">瞅瞅景点</a></li>
             <li><a href="第二页2.html">看看别的</a></li>
+        </ul>
+    </div>
+    *{
+         padding:0;
+         margin:0;
+    }
+    .nav{
+        height:58px;
+        background-color:#000;
+    }
+    .center{
+        width:1000px;
+        list-style:none;
+        margin:0 auto;
+        background-color:pink;
+    }
+    li{
+        color:rgb(224,9,9);
+        float:left;
+    }
+   a{
+      display:inline-block;
+      padding:0 20px;
+      line-height:58px;
+      text-decoration:none;
+      color:white;
+   }
     <script>
         var chart_7d52a978d01d4d58ad01243fbc79ea55 = echarts.init(
             document.getElementById('7d52a978d01d4d58ad01243fbc79ea55'), 'white', {renderer: 'canvas'});
