--- a/结果2.html
+++ b/结果2.html
@@ -9,11 +9,11 @@
 <body>
     <div id="7d52a978d01d4d58ad01243fbc79ea55" style="width:1300px; height:700px;"></div>
     <div class="nav">
-        <ul class="nav_ul">
-            <li><a href="index.html">首页</a></li>
-            <li><a href="结果2.html">看看天气</a></li>
-            <li><a href="可视化.html">瞅瞅景点</a></li>
-            <li><a href="第二页2.html">看看别的</a></li>
+        <ul class="center">
+            <li><a href="index.html">首页</a>|</li>
+            <li><a href="结果2.html">看看天气</a>|</li>
+            <li><a href="可视化.html">瞅瞅景点</a>|</li>
+            <li><a href="第二页2.html">看看别的</a>|</li>
         </ul>
     </div>
     *{
