--- a/结果2.html
+++ b/结果2.html
@@ -16,6 +16,7 @@
             <li><a href="第二页2.html">看看别的</a>|</li>
         </ul>
     </div>
+    <style>
     *{
          padding:0;
          margin:0;
@@ -34,13 +35,14 @@
         color:rgb(224,9,9);
         float:left;
     }
-   a{
+    a{
       display:inline-block;
       padding:0 20px;
       line-height:58px;
       text-decoration:none;
       color:white;
-   }
+    }
+    </style>
     <script>
         var chart_7d52a978d01d4d58ad01243fbc79ea55 = echarts.init(
             document.getElementById('7d52a978d01d4d58ad01243fbc79ea55'), 'white', {renderer: 'canvas'});
