--- a/结果2.html
+++ b/结果2.html
@@ -11,7 +11,8 @@
     }
     .nav{
         height:58px;
-        background-color:#000;
+        background-color:#B0E0E6;
+        margin-top:10px;
     }
     .center{
         width:1000px;
