--- a/结果2.html
+++ b/结果2.html
@@ -13,6 +13,8 @@
         height:58px;
         background-color:#B0E0E6;
         margin-top:10px;
+        top:0;
+        position:fixed;
     }
     .center{
         width:1000px;
