--- a/结果2.html
+++ b/结果2.html
@@ -34,7 +34,10 @@
     }
     </style>
 </head>
-<body>
+<body background="pp2.jpg"
+      style="background-repeat:no-repeat
+      background-attachment:fixed;
+      background-size:cover; ">
     <div id="7d52a978d01d4d58ad01243fbc79ea55" style="width:1300px; height:800px;"></div>
     <div class="nav">
         <ul class="center">
