--- a/结果2.html
+++ b/结果2.html
@@ -37,6 +37,7 @@
 <body background="pp3.jpg"
       style="background-repeat:no-repeat
       background-attachment:fixed;
+      opacity:0.5
       background-size:cover; ">
     <div id="7d52a978d01d4d58ad01243fbc79ea55" style="width:1300px; height:800px;"></div>
     <div class="nav">
