--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <title>旅游数据可视化</title>
     <style type="text/css">
+            p{
+                position:absolute;
+                top:20px;
+                left:100px;
+            }
             $color-gray: #666;
             $color-black: #000;
             $stripe-height: 7px;
@@ -148,7 +153,7 @@
 <body background="pp7.jpg"
       style="background-repeat:no-repeat
       background-attachment:fixed;
-      background-size:cover; ">
+      background-size:100% 100%; ">
 <p>城迹探旅</p>
     <div style="position:relative;">
         <button onclick="window.location.href='结果2.html'" >看看天气</button>
