--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
                 position:absolute;
                 top:20px;
                 left:100px;
+                font-size: 30px;
+                color:black;
+                font-family:微软雅黑;
             }
             $color-gray: #666;
             $color-black: #000;
@@ -153,7 +156,7 @@
 <body background="pp7.jpg"
       style="background-repeat:no-repeat
       background-attachment:fixed;
-      background-size:100% 100%; ">
+      background-size:110% 110%; ">
 <p>城迹探旅</p>
     <div style="position:relative;">
         <button onclick="window.location.href='结果2.html'" >看看天气</button>
