--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
                 position:absolute;
                 top:20px;
                 left:500px;
-                font-size: 80px;
+                font-size: 75px;
                 color:black;
-                font-family:微软雅黑;
+                font-family:鸿雷板书简体-正式版;
             }
             $color-gray: #666;
             $color-black: #000;
@@ -156,7 +156,7 @@
 <body background="pp8.jpg"
       style="background-repeat:no-repeat
       background-attachment:fixed;
-      background-size:90% 90%; ">
+      background-size:95% 95%; ">
 <p>城迹探旅</p>
     <div style="position:relative;">
         <button onclick="window.location.href='结果2.html'" >看看天气</button>
