--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
                 position:absolute;
                 top:20px;
                 left:500px;
-                font-size: 75px;
-                color:black;
+                font-size: 90px;
+                color:#FF6347;
                 font-family:鸿雷板书简体-正式版;
             }
             $color-gray: #666;
@@ -156,7 +156,7 @@
 <body background="pp8.jpg"
       style="background-repeat:no-repeat
       background-attachment:fixed;
-      background-size:95% 95%; ">
+      background-size:100% 95%; ">
 <p>城迹探旅</p>
     <div style="position:relative;">
         <button onclick="window.location.href='结果2.html'" >看看天气</button>
