--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <style type="text/css">
             p{
                 position:absolute;
-                top:1px;
-                left:300px;
+                top:top;
+                left:350px;
                 font-size: 140px;
                 color:#FF6347;
                 font-family:鸿雷板书简体-正式版;
@@ -136,10 +136,11 @@
             background-size:cover;
             font-size:25px;
 /*             background-color:; */
-            color:black;
+            color:#FF6347;
             border:none;
             cursor:pointer;
             margin:50px;
+            font-family:鸿雷板书简体-正式版;
             transform: skewX(-20deg);
             margin-left:70px;
             margin-right:70px;
