--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <style type="text/css">
             p{
                 position:absolute;
-                top:top;
+                top:1px;
                 left:350px;
                 font-size: 140px;
                 color:#FF6347;
