--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -136,7 +134,7 @@
             padding:10px 20px;
             background-image:url(pp8.jpg);
             background-size:cover;
-            font-size:25px;
+            font-size:28px;
 /*             background-color:; */
             color:#FF6347;
             border:none;
@@ -162,9 +160,9 @@
       background-size:100% 100%; ">
 <p>城迹探旅</p>
     <div style="position:relative;">
-        <button onclick="window.location.href='结果2.html'" >看看天气</button>
-        <button onclick="window.location.href='可视化.html'">瞅瞅景点</button>
-        <button onclick="window.location.href='第二页2.html'">看看别的</button>
+        <button onclick="window.location.href='结果2.html'" >看看<br/>天气</button>
+        <button onclick="window.location.href='可视化.html'">瞅瞅<br/>景点</button>
+        <button onclick="window.location.href='第二页2.html'">看看<br/>别的</button>
     </div>
    
 
