--- a/index.html
+++ b/index.html
@@ -130,11 +130,11 @@
             height:100%;
             }
             button{
-            writing-mode:vertical-rl;
+/*             writing-mode:vertical-rl; */
             padding:10px 20px;
             background-image:url(pp8.jpg);
             background-size:cover;
-            font-size:28px;
+            font-size:26px;
 /*             background-color:; */
             color:#FF6347;
             border:none;
