--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             height:100%;
             }
             button{
-/*             writing-mode:vertical-rl; */
+            writing-mode:horizontal-tb;
             padding:10px 20px;
             background-image:url(pp8.jpg);
             background-size:cover;
