--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 <p>城迹探旅</p>
     <div style="position:relative;">
         <button onclick="window.location.href='结果2.html'" >气候<br/>纵览</button>
-        <button onclick="window.location.href='可视化.html'">美食<br/>风景簿</button>
+        <button onclick="window.location.href='可视化.html'">美食<br/>风景</button>
         <button onclick="window.location.href='第二页2.html'">人流<br/>出行</button>
     </div>
    
