--- a/结果2.html
+++ b/结果2.html
@@ -34,11 +34,11 @@
     }
     </style>
 </head>
-<body background="pp2.jpg"
+<body background="pp9.jpg"
       style="background-repeat:no-repeat
       background-attachment:fixed;
       opacity:0.7
-      background-size:cover; ">
+      background-size:100% 100%; ">
     <div id="7d52a978d01d4d58ad01243fbc79ea55" style="width:1300px; height:700px;"></div>
     <div class="nav">
         <ul class="center">
