--- a/结果2.html
+++ b/结果2.html
@@ -37,8 +37,8 @@
 <body background="pp10.jpg"
       style="background-repeat:no-repeat
       background-attachment:fixed;
-      opacity:0.7
-      background-size:100% 100%; ">
+      opacity:0.9
+      background-size:cover; ">
     <div id="7d52a978d01d4d58ad01243fbc79ea55" style="width:1300px; height:700px;"></div>
     <div class="nav">
         <ul class="center">
