--- a/结果2.html
+++ b/结果2.html
@@ -19,7 +19,7 @@
         width:1000px;
         list-style:none;
         margin:0 auto;
-        background-color:pink;
+        background-color:orange;
     }
     li{
         color:rgb(224,9,9);
@@ -39,13 +39,13 @@
       background-attachment:fixed;
       opacity:0.9
       background-size:cover; ">
-    <div id="7d52a978d01d4d58ad01243fbc79ea55" style="width:1300px; height:700px;"></div>
+    <div id="7d52a978d01d4d58ad01243fbc79ea55" style="width:1200px; height:700px;"></div>
     <div class="nav">
         <ul class="center">
             <li><a href="index.html">首页</a>|</li>
-            <li><a href="结果2.html">看看天气</a>|</li>
-            <li><a href="可视化.html">瞅瞅景点</a>|</li>
-            <li><a href="第二页2.html">看看别的</a>|</li>
+            <li><a href="结果2.html">气候纵览</a>|</li>
+            <li><a href="可视化.html">美食风景</a>|</li>
+            <li><a href="第二页2.html">人流出行</a>|</li>
         </ul>
     </div>
     <script>
