--- a/结果2.html
+++ b/结果2.html
@@ -1,3 +1,7 @@
+
+
+
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -38,7 +42,7 @@
       style="background-repeat:no-repeat
       background-attachment:fixed;
       opacity:0.9
-      background-size:cover; ">
+      background-size:110% 100%; ">
     <div id="7d52a978d01d4d58ad01243fbc79ea55" style="width:1200px; height:700px;"></div>
     <div class="nav">
         <ul class="center">
