--- a/结果2.html
+++ b/结果2.html
@@ -1215,7 +1215,9 @@
                         "\u6d77\u5357\u6700\u4f4e\u6c14\u6e29\uff08\u4ee5\u4e09\u4e9a\u4e3a\u4f8b\uff09": true,
                         "\u5e7f\u5dde\u6700\u4f4e\u6c14\u6e29": true
                     },
-                    "show": true
+                    "show": true,
+                    "left":'5px',
+                    "right":"900px"
                 },
                 {
                     "data": [
