--- a/结果2.html
+++ b/结果2.html
@@ -14,13 +14,13 @@
          margin:0;
     }
     .nav{
-        height:30px;
+        width:30px;
         background-color:#B0E0E6;
-        top:0;
+        left:0;
         position:fixed;
     }
     .center{
-        width:1000px;
+        height:1000px;
         list-style:none;
         margin:0 auto;
         background-color:orange;
@@ -1109,7 +1109,8 @@
         "grid": [
             {
                 "top": "4%",
-                "bottom":"50%"
+                "bottom":"50%",
+                "left":"30%"
             },
             {
                 "left": "5%"
