--- a/结果2.html
+++ b/结果2.html
@@ -20,14 +20,14 @@
         position:fixed;
     }
     .center{
-        height:1000px;
+        height:500px;
         list-style:none;
         margin:0 auto;
         background-color:orange;
     }
     li{
         color:rgb(255,165,0);
-        float:left;
+        float:top;
     }
     a{
       display:inline-block;
@@ -1110,7 +1110,7 @@
             {
                 "top": "4%",
                 "bottom":"50%",
-                "left":"30%"
+                "left":"15%"
             },
             {
                 "left": "5%"
