--- a/结果2.html
+++ b/结果2.html
@@ -14,25 +14,25 @@
          margin:0;
     }
     .nav{
-        width:30px;
+        width:100px;
         background-color:#B0E0E6;
         left:0;
         position:fixed;
     }
     .center{
-        height:500px;
+        height:50px;
         list-style:none;
         margin:0 auto;
         background-color:orange;
     }
     li{
         color:rgb(255,165,0);
-        float:top;
+        float:left;
     }
     a{
       display:inline-block;
       padding:0 20px;
-      line-height:30px;
+      line-height:50px;
       text-decoration:none;
       color:white;
     }
