--- a/结果2.html
+++ b/结果2.html
@@ -23,11 +23,17 @@
         height:50px;
         list-style:none;
         margin:0 auto;
-        background-color:orange;
+        background-color:#B0E0E6;
     }
     li{
         color:rgb(255,165,0);
         float:left;
+        width:100px;
+        height:50px;
+        line-height:50px;
+        text-align:left;
+        padding-left:20px;
+        box-sizing:border-box;
     }
     a{
       display:inline-block;
