--- a/结果2.html
+++ b/结果2.html
@@ -22,7 +22,8 @@
     .center{
         height:50px;
         list-style:none;
-        margin:0 auto;
+        line-height:20px;
+        margin:0 auto;padding:0;
         background-color:#B0E0E6;
     }
     li{
@@ -36,9 +37,11 @@
         box-sizing:border-box;
     }
     a{
-      display:inline-block;
-      padding:0 20px;
-      line-height:50px;
+      display:block;
+      width:10px;
+      text-align:center;
+/*       padding:0 20px; */
+/*       line-height:50px; */
       text-decoration:none;
       color:white;
     }
