--- a/结果2.html
+++ b/结果2.html
@@ -16,11 +16,11 @@
     .nav{
         width:100px;
         background-color:#B0E0E6;
-        left:0;
+        top:0;
         position:fixed;
     }
     .center{
-        height:50px;
+        height:20px;
         list-style:none;
         line-height:20px;
         margin:0 auto;padding:0;
@@ -30,8 +30,8 @@
         color:rgb(255,165,0);
         float:left;
         width:100px;
-        height:50px;
-        line-height:50px;
+        height:20px;
+        line-height:20px;
         text-align:left;
         padding-left:20px;
         box-sizing:border-box;
