--- a/结果2.html
+++ b/结果2.html
@@ -1,7 +1,3 @@
-
-
-
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -38,7 +34,7 @@
     }
     a{
       display:block;
-      width:10px;
+      width:100px;
       text-align:center;
 /*       padding:0 20px; */
 /*       line-height:50px; */
@@ -55,10 +51,10 @@
     <div id="7d52a978d01d4d58ad01243fbc79ea55" style="width:1200px; height:700px;"></div>
     <div class="nav">
         <ul class="center">
-            <li><a href="index.html">首页</a>|</li>
-            <li><a href="结果2.html">气候纵览</a>|</li>
-            <li><a href="可视化.html">美食风景</a>|</li>
-            <li><a href="第二页2.html">人流出行</a>|</li>
+            <li><a href="index.html">首页</a></li>
+            <li><a href="结果2.html">气候纵览</a></li>
+            <li><a href="可视化.html">美食风景</a></li>
+            <li><a href="第二页2.html">人流出行</a></li>
         </ul>
     </div>
     <script>
