--- a/结果2.html
+++ b/结果2.html
@@ -10,7 +10,7 @@
          margin:0;
     }
     .nav{
-        width:100px;
+        width:60px;
         background-color:#B0E0E6;
         top:0;
         position:fixed;
@@ -25,7 +25,7 @@
     li{
         color:rgb(255,165,0);
         float:left;
-        width:100px;
+        width:60px;
         height:20px;
         line-height:20px;
         text-align:left;
@@ -34,12 +34,12 @@
     }
     a{
       display:block;
-      width:100px;
+      width:60px;
       text-align:center;
 /*       padding:0 20px; */
 /*       line-height:50px; */
       text-decoration:none;
-      color:white;
+      color:black;
     }
     </style>
 </head>
