--- a/结果2.html
+++ b/结果2.html
@@ -8,18 +8,18 @@
     *{
          padding:0;
          margin:0;
-         font-size:10px;
+         font-size:12px;
     }
     .nav{
         width:60px;
         background-color:#B0E0E6;
-        top:0;
+        top:50px;
         position:fixed;
     }
     .center{
         height:20px;
         list-style:none;
-        line-height:20px;
+        line-height:60px;
         margin:0 auto;padding:0;
         background-color:#B0E0E6;
     }
@@ -28,7 +28,7 @@
         float:left;
         width:60px;
         height:20px;
-        line-height:20px;
+        line-height:60px;
         text-align:left;
         padding-left:20px;
         box-sizing:border-box;
