--- a/结果2.html
+++ b/结果2.html
@@ -30,7 +30,7 @@
         height:20px;
         line-height:60px;
         text-align:left;
-        padding-left:20px;
+        padding-left:0;
         box-sizing:border-box;
     }
     a{
