--- a/结果2.html
+++ b/结果2.html
@@ -31,6 +31,7 @@
         line-height:60px;
         text-align:left;
         padding-left:0;
+        padding-top:50px;
         box-sizing:border-box;
     }
     a{
