--- a/结果2.html
+++ b/结果2.html
@@ -12,6 +12,7 @@
     }
     .nav{
         width:60px;
+        height:20px;
         background-color:#B0E0E6;
         top:50px;
         position:fixed;
@@ -19,7 +20,7 @@
     .center{
         height:20px;
         list-style:none;
-        line-height:60px;
+        line-height:20px;
         margin:0 auto;padding:0;
         background-color:#B0E0E6;
     }
@@ -28,10 +29,9 @@
         float:left;
         width:60px;
         height:20px;
-        line-height:60px;
+        line-height:20px;
         text-align:left;
         padding-left:0;
-        padding-top:40px;
         box-sizing:border-box;
     }
     a{
