--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
     <div style="position:relative;">
         <button onclick="window.location.href='结果2.html'" >气候<br/>纵览</button>
         <button onclick="window.location.href='可视化.html'">美食<br/>风景</button>
-        <button onclick="window.location.href='第二页2.html'">人流<br/>出行</button>
+        <button onclick="window.location.href='人流出行.html'">人流<br/>出行</button>
     </div>
    
 
