--- a/人流出行.html
+++ b/人流出行.html
@@ -2,11 +2,14 @@
 <head>
 <meta charset=UTF-8">
 <title>交通工具时长</title>
-</head>
-<frameset cols="*,70%,25%">
-	<frame src="name.html"
+</head> 
+<frameset rows="10%,90%">
+         <frame src="导航.html">
+         <frameset cols="*,70%,25%">
+	        <frame src="name.html"
 name="city">
-        <frame src="chart.html" name="chart">
-         <frame src="table.html" name="table">
+                <frame src="chart.html" name="chart">
+                <frame src="table.html" name="table">
+         </frameset>
 </frameset>
 </html>           
