--- a/结果2.html
+++ b/结果2.html
@@ -56,7 +56,7 @@
             <li><a href="index.html">首页</a></li>
             <li><a href="结果2.html">气候纵览</a></li>
             <li><a href="可视化.html">美食风景</a></li>
-            <li><a href="第二页2.html">人流出行</a></li>
+            <li><a href="人流出行.html">人流出行</a></li>
         </ul>
     </div>
     <script>
