--- a/导航.html
+++ b/导航.html
@@ -3,10 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <title>Awesome-pyecharts</title>
+<style>
+    *{
+         padding:0;
+         margin:0;
+         font-size:12px;
+    }
+      a{
+      display:block;
+      width:60px;
+      text-align:center;
+      background-color:#B0E0E6;
+      text-decoration:none;
+      color:black;
+    }
+    </style>
 </head>
 <body >
 <a href="index.html" target="view_frame" >首页</a>
 <a href="结果2.html"  target="view_frame">气候纵览</a>
+<a href="美食风景.html"  target="view_frame">美食风景</a>
 <a href="人流出行.html"  target="view_frame">人流出行</a>
 </body>
 </html>
