--- a/导航.html
+++ b/导航.html
@@ -7,11 +7,12 @@
     *{
          padding:0;
          margin:0;
-         font-size:12px;
+         font-size:15px;
     }
       a{
-      display:block;
-      width:60px;
+      display:inline-flex;
+      width:100px;
+      height:50px;
       text-align:center;
       background-color:#B0E0E6;
       text-decoration:none;
