--- a/name.html
+++ b/name.html
@@ -9,6 +9,11 @@
                parent.table.location="table1.html";
 };
 </script>
+<style>
+a{
+    color:orange;
+}
+</style>
 <body background="pp10.jpg"
       style="background-repeat:no-repeat
       background-attachment:fixed;
