--- a/导航.html
+++ b/导航.html
@@ -20,7 +20,11 @@
     }
     </style>
 </head>
-<body >
+<body background="pp10.jpg"
+      style="background-repeat:no-repeat
+      background-attachment:fixed;
+      opacity:0.9
+      background-size:120% 100%; ">
 <a href="index.html" target="view_frame" >首页</a>
 <a href="结果2.html"  target="view_frame">气候纵览</a>
 <a href="美食风景.html"  target="view_frame">美食风景</a>
