--- a/可视化.html
+++ b/可视化.html
@@ -3,14 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <title>Awesome-pyecharts</title>
-            <script type="text/javascript" src="https://assets.pyecharts.org/assets/echarts.min.js"></script>
+<!--             <script type="text/javascript" src="https://assets.pyecharts.org/assets/echarts.min.js"></script>
         <script type="text/javascript" src="https://assets.pyecharts.org/assets/echarts-wordcloud.min.js"></script>
         <script type="text/javascript" src="https://assets.pyecharts.org/assets/maps/china.js"></script>
         <script type="text/javascript" src="https://assets.pyecharts.org/assets/themes/chalk.js"></script>
-
+ -->
 </head>
 <body>
-    <style>.box { justify-content:center; display:flex; flex-wrap:wrap;  } </style>
+    <frameset rows="10%,90%">
+         <frame src="导航.html">
+         <frameset cols="50%,50%">
+	        <frame src="不知道1.html"
+name="city">
+                <frame src="不知道2.html" name="chart">
+<!--                 <frame src="table.html" name="table"> -->
+         </frameset>
+</frameset>
+<!--     <style>.box { justify-content:center; display:flex; flex-wrap:wrap;  } </style>
     <div class="box">
             <div id="1f8d801059324f35b20e1ed163ad5164" style="width:900px; height:500px;"></div>
     <script>
@@ -29,8 +38,8 @@
         "#ca8622",
         "#bda29a",
         "#6e7074",
-        "#546570",
-        "#c4ccd3",
+        "#546570", -->
+<!-- <!--         "#c4ccd3",
         "#f05b72",
         "#ef5b9c",
         "#f47920",
@@ -50,8 +59,8 @@
         {
             "type": "wordCloud",
             "shape": "diamond",
-            "rotationRange": [
-                0,
+            "rotationRange": [ -->
+<!--                 0,
                 0
             ],
             "rotationStep": 45,
@@ -72,7 +81,7 @@
                 },
                 {
                     "name": "#\u4e00\u8d77\u6765\u6c5f\u82cf\u65c5\u6e38#",
-                    "value": 1,
+                    "value": 1, -->
                     "textStyle": {
                         "normal": {
                             "color": "rgb(65,147,3)"
@@ -1999,6 +2008,6 @@
 };
         chart_e9c9f4cbcf164d63aaaa001f741031fc.setOption(option_e9c9f4cbcf164d63aaaa001f741031fc);
     </script>
-<br/>    </div>
+<br/>    </div> -->
 </body>
 </html>
