--- a/导航.html
+++ b/导航.html
@@ -27,7 +27,7 @@
       background-size:120% 100%; ">
 <a href="index.html" target="view_frame" >首页</a>
 <a href="结果2.html"  target="view_frame">气候纵览</a>
-<a href="美食风景.html"  target="view_frame">美食风景</a>
+<a href="可视化.html"  target="view_frame">美食风景</a>
 <a href="人流出行.html"  target="view_frame">人流出行</a>
 </body>
 </html>
