--- a/可视化.html
+++ b/可视化.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <title>Awesome-pyecharts</title>
 </head>
-    <frameset rows="10%,90%">
+    <frameset rows="10%,90%" border="0">
          <frame src="导航.html">
-         <frameset cols="50%,50%">
+         <frameset cols="50%,50%" border="0">
 	        <frame src="不知道1.html"
 name="city">
                 <frame src="不知道2.html" name="chart">
