--- a/name.html
+++ b/name.html
@@ -10,15 +10,18 @@
 };
 </script>
 <style>
+*{
+  font-size:20px;
+}
 a{
     text-decoration:none;
-    color:orange;
+    color:black;
+   display:block;
+   margin-top:50px;
+border: 1px solid #ccc;
 }
 </style>
-<body background="pp10.jpg"
-      style="background-repeat:no-repeat
-      background-attachment:fixed;
-      background-size:100% 100%; ">
+<body style="background-color: rgba(240,248,255,0.5)" >
 <a href="javascript:void(0);"
 onclick="parent.chart.location='barc.html';
 parent.table.location='table1.html';">
