--- a/导航.html
+++ b/导航.html
@@ -7,27 +7,32 @@
     *{
          padding:0;
          margin:0;
-         font-size:15px;
+                  font-size:25px;
     }
       a{
       display:inline-flex;
-      width:100px;
-      height:50px;
+           height:50px;
       text-align:center;
-      background-color:#B0E0E6;
       text-decoration:none;
       color:black;
-    }
-    </style>
+      position:relative;
+       left: 300px;
+      margin-left:20px;
+        }
+
+      p{
+            font-weight: bold;
+            font-style: italic;
+            position: absolute;
+             left: 80px;
+              display:inline;                }
+     </style>
 </head>
-<body background="pp10.jpg"
-      style="background-repeat:no-repeat
-      background-attachment:fixed;
-      opacity:0.9
-      background-size:120% 100%; ">
-<a href="index.html" target="view_frame" >首页</a>
-<a href="结果2.html"  target="view_frame">气候纵览</a>
-<a href="可视化.html"  target="view_frame">美食风景</a>
-<a href="人流出行.html"  target="view_frame">人流出行</a>
+<body style="background-color: rgba(0,104,139,0.5)" >
+ <p>城迹探旅</p>
+<a href="index.html" target="view_frame" > 首页</a>
+<a href="结果2.html"   target="view_frame">气候纵览</a>
+<a href="可视化.html"   target="view_frame">美食风景</a>
+<a href="人流出行.html" target="view_frame">人流出行</a>
 </body>
 </html>
