--- a/barm.html
+++ b/barm.html
@@ -6,10 +6,7 @@
                 <script type="text/javascript" src="https://assets.pyecharts.org/assets/v5/echarts.min.js"></script>
 
 </head>
-<body background="pp10.jpg"
-      style="background-repeat:no-repeat
-      background-attachment:fixed;
-      background-size:100% 100%; ">
+<body style="background-color: rgba(240,248,255,0.5)" >
     <div id="209ebfb759dd49fe9a0dd47c11c320f2" class="chart-container" style="width:900px; height:500px; "></div>
     <script>
         var chart_209ebfb759dd49fe9a0dd47c11c320f2 = echarts.init(
