--- a/table2.html
+++ b/table2.html
@@ -4,10 +4,7 @@
     <meta charset="UTF-8">
     <title>Awesome-pyecharts</title>
 </head>
-<body background="pp10.jpg"
-      style="background-repeat:no-repeat
-      background-attachment:fixed;
-      background-size:100% 100%; ">
+<body style="background-color: rgba(240,248,255,0.5)" >
 
         <style>
             .fl-table {
@@ -62,7 +59,7 @@
             }
         </style>
         <div id="198503a72d474453a0ac6fedabd5dd5f" class="chart-container" style="">
-            <p class="title" style="font-size: 18px; font-weight:bold;" > 各城市到达西安需乘坐交通工具时长</p>
+            <p class="title" style="font-size: 18px; font-weight:bold;" > 各城市到达西安需乘坐交通工具时长(下表主要展示较短时长)</p>
             <p class="subtitle" style="font-size: 12px;" > </p>
             <table class="fl-table">
     <thead>
