--- a/气候纵览.html
+++ b/气候纵览.html
@@ -6,6 +6,6 @@
 </head> 
 <frameset rows="5%,95%" border="1">
          <frame src="导航.html" name="top_frame">
-         <frame src="结果2%20.html" name="bottom_frame">
+         <frame src="结果2 .html" name="bottom_frame">
 </frameset>
 </html>           
