--- a/导航.html
+++ b/导航.html
@@ -31,7 +31,7 @@
 <body style="background-color: rgba(0,104,139,0.5)" >
  <p>城迹探旅</p>
 <a href="index.html" target="view_frame" > 首页</a>
-<a href="结果2.html"   target="view_frame">气候纵览</a>
+<a href="气候纵览.html"   target="view_frame">气候纵览</a>
 <a href="可视化.html"   target="view_frame">美食风景</a>
 <a href="人流出行.html" target="view_frame">人流出行</a>
 </body>
