--- a/气候纵览.html
+++ b/气候纵览.html
@@ -4,8 +4,9 @@
 <meta charset=UTF-8">
 <title>交通工具时长</title>
 </head> 
-<frameset rows="5%,95%" border="1">
+<frameset rows="5%,47.5%,47.5%" border="1">
          <frame src="导航.html" name="top_frame">
-         <frame src="结果2 .html" name="bottom_frame">
+         <frame src="气候.html">
+      <frame src="气温.html">
 </frameset>
 </html>           
