--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
                 color:#FF6347;
                 font-family:鸿雷板书简体-正式版;
             }
+           *{
+                margin: 0px;
+                padding: 0px;
+                box-sizing: border-box;
+                font-family: sans-serif;
+            }
             $color-gray: #666;
             $color-black: #000;
             $stripe-height: 7px;
