--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 top:100px;
                 left:350px;
                 font-size: 140px;
-                color:black;   
+                color:#668B8B;   
               font-family:MyFont;
             }
             *{
@@ -148,7 +148,7 @@
             background-size:cover;
             font-size:31px;
 /*             background-color:; */
-            color:black;
+            color:#668B8B;
             border:none;
             cursor:pointer;
             margin:50px;
