--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <style>
          @font-face {
          font-family: "MyFont";
-         src: url("STXINGKA.TTF");
+         src: url("ChillLongCangKaiShu_Regular.otf");
 }
 </style>
     <style type="text/css">
