--- a/可视化.html
+++ b/可视化.html
@@ -7,8 +7,7 @@
     <frameset rows="10%,90%" border="1">
          <frame src="导航.html">
          <frameset cols="50%,50%" border="1">
-	        <frame src="全国地图.html"
-name="city">
+	        <frame src="全国地图.html" name="city">
                 <frame src="不知道2.html" name="chart">
 <!--                 <frame src="table.html" name="table"> -->
          </frameset>
