--- a/全国地图.html
+++ b/全国地图.html
@@ -137,6 +137,7 @@ visualMap: {
   });
 });
 // 使用刚指定的配置项和数据显示图表。
+    myChart.setOption(option);
 myChart.on('click', function(params) {
       if (params.componentType === 'series') {
         if (params.seriesType === 'effectScatter') {
