--- a/全国地图.html
+++ b/全国地图.html
@@ -7,7 +7,7 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
 </head>
 <body >
-    <div id="china" style="width:800px ; height: 800px;"></div>
+    <div id="china" style="width:100% ; height:100%;"></div>
 
 <script type="text/javascript">
    var myChart = echarts.init(document.getElementById('china'));
@@ -40,8 +40,6 @@ visualMap: {
       realtime: true,
       calculable: true,
       hoverLink:true,
-      left:'400px',
-      bottom:'200px',
       inRange: {
       color: ['LightSkyBlue', 'yellow', '#FFA54F']
       }
@@ -138,6 +136,7 @@ visualMap: {
 });
 // 使用刚指定的配置项和数据显示图表。
     myChart.setOption(option);
+    
 myChart.on('click', function(params) {
       if (params.componentType === 'series') {
         if (params.seriesType === 'effectScatter') {
