--- a/全国地图.html
+++ b/全国地图.html
@@ -7,7 +7,7 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
 </head>
 <body >
-    <div id="china" style="width:100% ; height:100%;"></div>
+    <div id="china" style="width:auto ; height:auto;"></div>
 
 <script type="text/javascript">
    var myChart = echarts.init(document.getElementById('china'));
@@ -34,6 +34,7 @@ myChart.setOption(
                 },
 visualMap: {
     seriesIndex: 0,
+    show：false,
       min: 0,
       max: 8,
       text: ['High', 'Low'],
