--- a/成都地图.html
+++ b/成都地图.html
@@ -32,14 +32,15 @@
                     },
     visualMap: {
         seriesIndex: 0,
+          show:false,
           min: 0,
           max: 8,
-          text: ['High', 'Low'],
-          realtime: true,
-          calculable: true,
-          hoverLink:true,
-          left:'100px',
-          bottom:'100px',
+          // text: ['High', 'Low'],
+          // realtime: true,
+          // calculable: true,
+          // hoverLink:true,
+          // left:'100px',
+          // bottom:'100px',
           inRange: {
           color: ['LightSkyBlue', 'yellow', '#FFA54F']
           }
