--- a/全国地图.html
+++ b/全国地图.html
@@ -7,7 +7,7 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
 </head>
 <body >
-    <div id="china" style="width:auto ; height:auto;"></div>
+    <div id="china" style="width:600px ; height:600px;"></div>
 
 <script type="text/javascript">
    var myChart = echarts.init(document.getElementById('china'));
@@ -144,7 +144,7 @@ myChart.on('click', function(params) {
           var name = params.data.name;
           if (name === '成都') {
             window.location.href = '成都地图.html';
-            // parent.wordcloud.href = '成都词云.html'
+            parent.wordcloud.href = '成都词云.html'
           } 
         //   else if (name === '散点') {
         //     window.location.href = '城市地图.html';
