--- a/全国地图.html
+++ b/全国地图.html
@@ -34,7 +34,7 @@ myChart.setOption(
                 },
 visualMap: {
     seriesIndex: 0,
-    show：false,
+    //show：false,
       min: 0,
       max: 8,
       text: ['High', 'Low'],
@@ -144,7 +144,7 @@ myChart.on('click', function(params) {
           var name = params.data.name;
           if (name === '成都') {
             window.location.href = '成都地图.html';
-            parent.wordcloud.href = '成都词云.html'
+            //parent.wordcloud.href = '成都词云.html'
           } 
         //   else if (name === '散点') {
         //     window.location.href = '城市地图.html';
