--- a/全国地图.html
+++ b/全国地图.html
@@ -7,7 +7,7 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
 </head>
 <body >
-    <div id="china" style="width:600px ; height:600px;"></div>
+    <div id="china" style="width:1700px ; height: 1000px;"></div>
 
 <script type="text/javascript">
    var myChart = echarts.init(document.getElementById('china'));
@@ -34,13 +34,15 @@ myChart.setOption(
                 },
 visualMap: {
     seriesIndex: 0,
-    //show：false,
+    show:false,
       min: 0,
       max: 8,
       text: ['High', 'Low'],
       realtime: true,
       calculable: true,
       hoverLink:true,
+      left:'400px',
+      bottom:'200px',
       inRange: {
       color: ['LightSkyBlue', 'yellow', '#FFA54F']
       }
@@ -108,7 +110,7 @@ visualMap: {
                     position: 'right',
                   },
 
-                  symbolSize: 10,
+                  symbolSize: 15,
                   color:'#FF4500',
                   visualMap:false
                   
@@ -137,14 +139,13 @@ visualMap: {
 });
 // 使用刚指定的配置项和数据显示图表。
     myChart.setOption(option);
-    
+
 myChart.on('click', function(params) {
       if (params.componentType === 'series') {
         if (params.seriesType === 'effectScatter') {
           var name = params.data.name;
           if (name === '成都') {
             window.location.href = '成都地图.html';
-            //parent.wordcloud.href = '成都词云.html'
           } 
         //   else if (name === '散点') {
         //     window.location.href = '城市地图.html';
