--- a/全国地图.html
+++ b/全国地图.html
@@ -7,7 +7,8 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
 </head>
 <body >
-    <div id="china" style="width:100% ; height: 100%;"></div>
+    <div id="china" style="width:1000px ; height: 1000px;"></div>
+
 <script type="text/javascript">
    var myChart = echarts.init(document.getElementById('china'));
 // 指定图表的配置项和数据
@@ -32,6 +33,7 @@ myChart.setOption(
                 },
 visualMap: {
     seriesIndex: 0,
+    show:false,
       min: 0,
       max: 8,
       text: ['High', 'Low'],
@@ -106,10 +108,11 @@ visualMap: {
                     show:true,
                     position: 'right',
                   },
+
+                  symbolSize: 15,
                   symbolSize: 10,
                   color:'#FF4500',
-                  visualMap:false
-                  
+
                   
         },
   ],
@@ -132,8 +135,7 @@ visualMap: {
   });
 });
 // 使用刚指定的配置项和数据显示图表。
-    myChart.setOption(option);
-
+myChart.setOption(option);
 myChart.on('click', function(params) {
       if (params.componentType === 'series') {
         if (params.seriesType === 'effectScatter') {
