--- a/全国地图.html
+++ b/全国地图.html
@@ -7,7 +7,7 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
 </head>
 <body >
-    <div id="china" style="width:auto ; height: auto;"></div>
+    <div id="china" style="width:1000px ; height: 1000px;"></div>
 
 <script type="text/javascript">
    var myChart = echarts.init(document.getElementById('china'));
