--- a/成都词云.html
+++ b/成都词云.html
@@ -3,14 +3,45 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://cdn.jsdelivr.net/npm/echarts@5.5.0/dist/echarts.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/echarts-wordcloud@2.1.0/dist/echarts-wordcloud.min.js"></script>
-    <title>成都词云</title>
+    <script src="js/echarts.min.js"></script>
+    <script src="js/echarts-wordcloud.min.js"></script>
+    <title>vocabulary</title>
+    <style>
+      #wordcloud {
+        width: 50%;
+        height: 700px;
+        float: left;
+      }
+      #info-container {
+        margin-top: 20px;
+        display: flex;
+        justify-content: center; /* 水平居中 */
+        align-items: center; /* 垂直居中 */
+        flex-direction: row;
+      }
+
+      #info-text {
+        flex: 1;
+        max-width: 100%; /* 响应式，最大宽度为容器宽度 */
+        font-size: 20px;
+        text-align: center; /* 如果你想要文本在垂直堆叠时也居中 */
+      }
+
+      #info-image {
+        /* 注意：这里我们直接对 #info-image 应用样式，而不是 #info-image img */
+        max-width: 100%; /* 响应式，最大宽度为容器宽度 */
+        height: auto; /* 保持图片的原始纵横比 */
+        margin: 0 auto;
+      }
+    </style>
   </head>
   <body>
     <center>
       <div id="main" style="height: 600px; width: 800px"></div>
-      <div id="info" style="font-size: 25px"></div>
+      <div id="info-container">
+        <div id="info-text"></div>
+        <div id="info-image"></div>
+      </div>
     </center>
     <script type="text/javascript">
       // 进行echarts的初始化，以及定位到画布
@@ -21,76 +52,105 @@
           name: "火锅",
           value: 260,
           info: "是中国传统美食之一，古称“古董羹”，因食物投入沸水时发出的“咕咚”声而得名。 火锅起源于中国，其特色是边煮边吃的烹饪、用餐方式。",
+          imageUrl:
+            "https://k.sinaimg.cn/n/sinakd20240319s/266/w640h426/20240319/cc3c-gif5a7cc25a534299ed82c4bb9ad058c7c6.gif/w700d1q75cms.jpg",
         },
         {
           name: "春熙路",
           value: 120,
           info: "春熙路是位于中国成都市的一条著名商业街道，是成都最繁华的商业中心之一。 它位于锦江区的中心位置，东临成都市总府街，西接红星路，全长约1公里。 春熙路是成都市金融中心和购物天堂，吸引着国内外游客和购物爱好者。",
+          imageUrl:
+            "https://nimg.ws.126.net/?url=http%3A%2F%2Fdingyue.ws.126.net%2F2021%2F0505%2Ff165a39ej00qsmt0a0058c000jz00dcg.jpg&thumbnail=660x2147483647&quality=80&type=jpg",
         },
         {
           name: "武侯祠",
           value: 105,
           info: "成都武侯祠是纪念刘备、诸葛亮等蜀汉英雄人物庙宇所在。 它肇始于蜀汉昭烈帝章武元年（221年）刘备惠陵修建时，在修建惠陵的同时也修建了汉昭烈庙。",
+          imageUrl:
+            "https://n.sinaimg.cn/spider20230327/238/w598h440/20230327/9833-6e490d30bc2d47b3f1a8bcaf27dfc4c7.png",
         },
         {
           name: "宽窄巷子",
           value: 99,
           info: "宽窄巷子位于四川省成都市青羊区长顺街附近，由宽巷子、窄巷子、井巷子平行排列组成，全为青黛砖瓦的仿古四合院落，这里也是成都遗留下来的较成规模的清朝古街道，是国家AA级旅游景区， 与 大慈寺 、 文殊院 一起并称为成都三大历史文化名城保护街区 。",
+          imageUrl:
+            "https://nimg.ws.126.net/?url=http%3A%2F%2Fdingyue.ws.126.net%2F2021%2F0505%2F2cbbbd0aj00qsmt090017c000hs00b8g.jpg&thumbnail=660x2147483647&quality=80&type=jpg",
         },
         {
           name: "人民公园",
           value: 73,
           info: "人民公园原名少城公园，始建于一九一一年，是中国近代最早的公园之一，也是四川近代第一座公园。",
+          imageUrl:
+            "https://tr-osdcp.qunarzz.com/tr-osd-tr-space/img/164dc0a4514abcb6565e9885494341fa.jpg_r_720x480x95_5d5fcfda.jpg",
         },
         {
           name: "东郊记忆",
           value: 51,
           info: "东郊记忆，原成都东区音乐公园，是集合音乐、美术、戏剧、摄影等文化形态的多元文化园区，工业遗址主题旅游地，艺术文化展演聚落，文艺创作交流园区，成都文化创意产业高地。",
+          imageUrl:
+            "https://nimg.ws.126.net/?url=http%3A%2F%2Fdingyue.ws.126.net%2F2024%2F0202%2F3d2f37c5j00s87zqh014td200u000jzg00gx00b9.jpg&thumbnail=660x2147483647&quality=80&type=jpg",
         },
         {
           name: "文殊院",
           value: 35,
           info: "文殊院是成都市内保存最为完整的佛教寺庙，坐北朝南，建筑为典型川西平原古建风格，主要为木构建筑。 殿宇六重，进山门往里走依次是天王殿、三大士殿、大雄宝殿、说法堂、藏经楼。 与东西两侧的钟楼、斋堂、廊房等建筑浑然一体，为典型的清代建筑。",
+          imageUrl:
+            "https://www.fcgjlx.com/ueditor/php/upload/image/20200716/1594879851175095.jpeg",
         },
         {
           name: "担担面",
           value: 28,
           info: "担担面是四川省的一道传统小吃，属于川菜系。该菜品起源于自贡市，由面粉、红辣椒油、芝麻酱、葱花等材料制作而成。",
+          imageUrl:
+            "https://imagepphcloud.thepaper.cn/pph/image/189/540/102.png",
         },
         {
           name: "玉林",
           value: 23,
           info: "玉林街道，隶属四川省成都市武侯区，地处武侯区中部，东与跳伞塔街道相连，南接火车南站街道，西与浆洗街、高新区的芳草街街道接壤，北临锦江河。总面积2.7平方千米。 ",
+          imageUrl:
+            "https://nimg.ws.126.net/?url=http%3A%2F%2Fdingyue.ws.126.net%2F2024%2F0430%2F84b17e9fj00scrbiz009xd0014000u0g.jpg&thumbnail=660x2147483647&quality=80&type=jpg",
         },
         {
           name: "锦里",
           value: 23,
           info: "锦里，位于四川省成都市，截至2017年占地30000余平方米，建筑面积14000余平方米，街道全长550米，是成都武侯祠博物馆的一部分，也是以明末清初川西民居作外衣、三国文化与成都民俗作内涵，集旅游购物、休闲娱乐为一体且具有商业气息的街道。",
+          imageUrl: "https://pic.quanjing.com/t5/dz/QJ6459661079.jpg@!794wsy",
         },
         {
           name: "盖碗茶",
           value: 21,
           info: "盖碗茶，四川等地回族人民传统的饮茶风俗。 是一种上有盖、下有托，中有碗的茶具。又称三才碗，盖为天、托为地、碗为人。品盖碗茶，韵味无穷。茶盖放在碗内，若要茶汤浓些，可用茶盖在水面轻轻刮一刮，使整碗茶水上下翻转，轻刮则淡，重刮则浓，是其妙也。",
+          imageUrl:
+            "https://pic.quanjing.com/d8/ux/QJ6331241510.jpg?x-oss-process=style/show_794s",
         },
         {
           name: "大慈寺",
           value: 52,
           info: "大慈寺也叫古大圣慈寺，位于四川省成都市东风路一段，建于公元3世纪至4世纪之间，被誉为“ 震旦 第一丛林”。公元622年玄奘年满二十岁，正式在此寺受具足戒，唐玄宗曾赐额“敕建大圣慈寺”，历经兴废，多次毁于兵火，现存诸殿为清顺治至同治年间陆续重建。",
+          imageUrl:
+            "http://www.yuelx.com/files/2018-6/d20180627150222105224.jpg",
         },
         {
           name: "黄龙溪",
           value: 56,
           info: "黄龙溪风景区位于四川省天府新区，全镇幅员面积达50.4平方公里，人口约2.8万人。经过改造的黄龙溪古镇，先后被评为“中国民间艺术火龙之乡”、“中国环境优美乡镇”、“中国民间文化遗产旅游示范区”、“中国历史文化名镇”、“国家AAAA级旅游景区”。黄龙溪镇是十大水乡古镇之一，拥有1700多年的历史，位于成都平原南部，历来就是重要的军事重镇。",
+          imageUrl:
+            "https://pics2.baidu.com/feed/aa18972bd40735fa383c9c14291f69bf0e24082e.jpeg@f_auto?token=e2dba20e75c33c4cd504f4bbc941e798",
         },
         {
           name: "成都",
           value: 846,
           info: "成都市，简称“蓉”，别称蓉城、锦城，四川省辖地级市，是四川省省会、副省级市、超大城市、国家中心城市，地处中国西南地区、四川盆地西部、成都平原腹地，是国务院批复确定的国家重要的高新技术产业基地、商贸物流中心和综合交通枢纽、西部地区重要的中心城市。",
+          imageUrl:
+            "https://nimg.ws.126.net/?url=http%3A%2F%2Fdingyue.ws.126.net%2F2023%2F0224%2F15af2218j00rql1b7001lc000hs00bug.jpg&thumbnail=660x2147483647&quality=80&type=jpg",
         },
         {
           name: "大熊猫",
           value: 1000,
           info: "大熊猫属于熊科、大熊猫属哺乳动物，是中国特有种。大熊猫仅有两个亚种，四川亚种和秦岭亚种，主要栖息地是中国四川、陕西和甘肃的山区。",
+          imageUrl:
+            "https://nimg.ws.126.net/?url=http%3A%2F%2Fdingyue.ws.126.net%2F2024%2F0317%2Fa17a774cj00sah08n0015d200k000dcg00it00cj.jpg&thumbnail=660x2147483647&quality=80&type=jpg",
         }
       );
       // 人像的base64编码
@@ -140,18 +200,28 @@
       // echarts的点击事件
       mychart.on("click", function (params) {
         // params 中包含了被点击项的信息
-        var infoElement = document.getElementById("info");
-        // 使用 params 中的 name 或其他属性来查找对应的额外信息
+        var infoTextElement = document.getElementById("info-text");
+        var infoImageElement = document.getElementById("info-image");
+
+        // 清除之前的图片（如果有的话）
+        infoImageElement.innerHTML = "";
+
+        // 使用 params 中的 name 来查找对应的额外信息
         var selectedItem = jsonlist.find(function (item) {
           return item.name === params.name;
         });
 
         if (selectedItem) {
           // 显示选中的词语对应的额外信息
-          infoElement.innerHTML = selectedItem.info;
+          infoTextElement.innerHTML = selectedItem.info;
+          // 显示图片
+          var imgElement = document.createElement("img");
+          imgElement.src = selectedItem.imageUrl;
+          imgElement.alt = selectedItem.name;
+          infoImageElement.appendChild(imgElement);
         } else {
           // 如果没有找到对应项，可以清空或显示默认信息
-          infoElement.innerHTML = "未找到相关信息";
+          infoTextElement.innerHTML = "未找到相关信息";
         }
       });
       mychart.setOption(option);
