--- a/可视化.html
+++ b/可视化.html
@@ -9,7 +9,7 @@
          <frameset cols="50%,50%" border="1">
 	        <frame src="全国地图.html" name="city">
                 <frame src="wordcloud.html" name="chart">
-<!--                 <frame src="table.html" name="table"> -->
+<!--                 <frame src="blank.html" name="table"> -->
          </frameset>
 </frameset>
 </html>
