--- a/成都词云.html
+++ b/成都词云.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.jsdelivr.net/npm/echarts@5.5.0/dist/echarts.min.js"></script>
-    <script src="https://raw.gitcode.com/ecomfe/echarts-wordcloud/raw/master/dist/echarts-wordcloud.min.js"></script>
+    <script src="https://gitee.com/mirrors/echarts-wordcloud/blob/master/dist/echarts-wordcloud.min.js"></script>
     <title>vocabulary</title>
     <style>
       #wordcloud {
