--- a/成都词云.html
+++ b/成都词云.html
@@ -181,17 +181,15 @@
             sizeRange: [30, 120],
             rotationRange: [-45, 90],
             textStyle: {
-              color: function () {
-                return (
-                  "rgb(" +
-                  Math.round(Math.random() * 250) +
-                  "," +
-                  Math.round(Math.random() * 250) +
-                  "," +
-                  Math.round(Math.random() * 250) +
-                  ")"
-                );
-              },
+					    color: function(e) {
+                var a = [
+                  Math.round(Math.random() * 255),
+                  Math.round(Math.random() * 255),
+                  Math.round(Math.random() * 255),
+                  (e.data.value / max) < 0.3 ? 0.3 : e.data.value
+                ]
+                return 'rgba(' + a.join(',') + ')'
+              }
             },
             // 调用数据
             data: jsonlist,
